# yt-session-generator

./: .gitignore  Dockerfile  compose.yml  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
app/: extractor.py  main.py
