[project]
name = "yt-session-generator"
version = "0.1.0"
description = "yt-session-generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.3",
    "uvloop>=0.21.0",
    "zendriver",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.15.0",
    "ruff>=0.11.7",
]
